<resources>
    <string name="registration">Registration</string>
    <string name="app_name">porchlyt-artisan</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="cannot_be_blank">cannot be blank</string>
    <string name="we_need_to_verify_your_mobile_number">we need to verify your mobile number</string>
    <string name="save">SAVE</string>
    <string name="max_3_skills">Max 3 skills</string>
    <string name="select_skills">Select Skills</string>
    <string name="select_some_skills">Select some skills</string>

    <string name="registration_in_progress">Registration in progress...</string>
    <string name="error_occured">Error occurred</string>
    <string name="confirm_5_digit_pin">Confirm 5 digit pin</string>
    <string name="invalid_otp">invalid Otp</string>

    <string name="completed_jobs">Completed\njobs</string>
    <string name="cancelled_jobs">Cancelled\njobs</string>
    <string name="disputed_jobs">Disputed\njobs</string>
    <string name="available_jobs">Available jobs</string>
    <string name="profile">Profile</string>
    <string name="blog">Blog</string>
    <string name="availability">Availability</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="please_wait">please wait...</string>
    <string name="per_hour">/hr</string>
    <string name="you_will_not_recieve_any_job_notifications">you will not recieve any job notifications</string>
    <string name="you_will_recieve_job_notifications">you will recieve job notifications</string>
    <string name="tap_to_enable_your_location_settings">tap to enable your location settings</string>
    <string name="we_need_your_location_to_provide_you_this_service">we need your location to provide you this service</string>
    <string name="information">Information</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="we_want_to_know_why_you_did_not_respond">We want to know why you did not respond?</string>
    <string name="i_am_busy">I am busy</string>
    <string name="i_am_slow_to_answer">I am slow to answer</string>
    <string name="i_cannot_do_this_job_right_now">I can not do this job right now</string>
    <string name="the_place_is_too_far">The place is too far</string>
    <string name="your_client_is_here">Your client is here</string>
    <string name="call_or_text_your_client_to_begin_communication">Call or text your client to begin communication</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="job_description">Job Description</string>
    <string name="job_details">Job Details</string>
    <string name="total_price">Total Price</string>
    <string name="add_bill">Add bill</string>
    <string name="task_name">task name... eg bulb fitting</string>
    <string name="total_time">Total time: </string>
    <string name="days">days </string>
    <string name="hrs"> hrs </string>
    <string name="mins"> mins </string>
    <string name="tasks">Tasks</string>
    <string name="address">Address</string>
    <string name="client_details">Client details</string>
    <string name="bills">bills</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="delete">delete</string>
    <string name="send_bill_to_client">send bill to client</string>
    <string name="bill_name">bill name</string>
    <string name="sent">sent</string>
    <string name="add_some_bills">Add some bills</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="hourly_rate">hourly rate</string>
    <string name="account_number">account number</string>
    <string name="error_updating_details">Error updating details</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="clear_photo">Clear photo</string>
    <string name="total_amount">Total amount</string>
    <string name="cash_payment_received_for">Cash payment received for:</string>
    <string name="accept_payment">Accept payment</string>
    <string name="confirm_payment_received">Confirm payment received</string>
    <string name="payment_confirmed">Payment Confirmed</string>
    <string name="this_job_is_closed">This job is closed</string>
    <string name="a_dispute_has_been_opened">A dispute has been opened</string>
    <string name="reason_for_dispute">Reason for dispute:</string>
    <string name="dispute_notification">Dispute notification</string>
    <string name="we_will_contact_you_to_resolve_the_issue_within_24_hrs">We will contact you to resolve the issue within 24 hrs</string>
    <string name="you_have_recieved_a_rating_of">You have received a rating of</string>
    <string name="card_payment_received">Card payment received for:</string>
    <string name="notifications">Notifications</string>
    <string name="earnings">Earnings</string>
    <string name="saved">saved</string>
    <string name="error_updating_services">Error updating services</string>
    <string name="skills_updated">Skills updated</string>
    <string name="cash_payment_received">Cash payment received</string>
    <string name="your_services_have_been_updated">Your services have been updated</string>
    <string name="view_notification">View notification</string>
    <string name="error_fetching_jobs">Error fetching jobs</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="this_mobile_does_not_exist">This mobile does not exist</string>
    <string name="unknown_location">Unknown location?</string>


    <string name="why_do_you_want_to_cancel">why do you want to cancel?</string>

    <string name="client_cannot_pay">client cannot pay</string>
    <string name="bad_reception">bad reception</string>
    <string name="incorrect_job_requested">incorrect job requested</string>

    <string name="other">other</string>
    <string name="this_job_was_cancelled">This job was cancelled</string>
    <string name="job_cancelled">Job cancelled</string>
    <string name="call">call</string>
    <string name="sms">sms</string>
    <string name="notification">Notification</string>
    <string name="channel_name">porchlyt</string>
    <string name="contact">Contact</string>
    <string name="banking_details">Banking details</string>
    <string name="total_earnings">Total earnings</string>
    <string name="view_more">View more</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="jobs">Jobs</string>
    <string name="total_jobs">Total jobs</string>
    <string name="total_jobs_this">Total jobs this </string>
    <string name="total_earnings_this">Total earnings this </string>
    <string name="network_error">Network Error</string>
    <string name="extra_jobs">Extra Jobs</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_extra_jobs">No extra jobs</string>
    <string name="this_job_is_under_dispute">This job is under dispute</string>



</resources>
