<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddTaskActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_task_name"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/bill_name" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/txt_task_bill"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/price" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:onClick="AddTaskBill"
        android:text="@string/add_bill"
        app:bootstrapBrand="warning"
        app:showOutline="true" />

</LinearLayout>