<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ViewMoreEarningsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mtoolbar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@color/primary"
        android:elevation="5dp" />

    <!--layout showing the blank page to begin with-->
    <RelativeLayout
        android:id="@+id/grand_layout_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </RelativeLayout>


    <!--layout showig network failed-->
    <RelativeLayout
        android:id="@+id/grand_layout_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img1"
            android:src="@drawable/ic_network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img1"
            android:text="@string/network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <!--layout that holds the other layouts-->
    <LinearLayout
        android:id="@+id/grand_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dedede"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_earnings"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/lbl_total_earnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="..."
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="38dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/lbl_total_earnings_this_month_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_earnings_this"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/lbl_total_earnings_this_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="..."
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="38dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#dedede"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_jobs"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/lbl_total_jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="..."
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="38dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/lbl_total_jobs_this_month_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_jobs_this"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/lbl_total_jobs_this_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="..."
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="38dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>




</LinearLayout>